--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "module": "dist/esm/index.js",
   "main": "dist/cjs/index.js",
   "author": "",
-  "license": "MIT",
+  "license": "ISC",
   "typings": "dist/cjs/index.d.ts",
   "sideEffects": false,
   "scripts": {
@@ -25,59 +25,43 @@
 		"@pincince64883736/cryptobot":"^0.0.2",
 		"@pincince64883736/daily-pro":"^0.3.0",
     "@etelstamour/asset-manage":"^0.3.0",
-    "tslib": "^2.1.0",
-    "use-constant": "^1.0.0",
-    "use-sync-external-store": "^1.1.0",
-    "@types/react": "^18.0.12",
-    "@types/react-dom": "^18.0.0",
-    "@types/react-test-renderer": "^18.0.0",
-    "@types/use-sync-external-store": "^0.0.3",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
-    "@vitejs/plugin-react": "^2.0.0",
-    "@vitest/coverage-c8": "^0.24.0",
-    "browser-resolve": "^2.0.0",
-    "codecov": "^3.8.2",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-react": "^7.23.1",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.0",
-    "prettier": "^2.0.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-test-renderer": "18.2.0",
-    "rxjs": "^7.0.0",
-    "standard": "^17.0.0",
-    "typescript": "^4.2.0",
-    "vite": "^3.0.0",
-    "vitest": "^0.24.0"
+    "babel-polyfill": "^6.26.0",
+		"core-js": "^3.35.1",
+		"eventemitter2": "^6.4.5",
+		"lodash": "^4.17.21",
+		"prop-types": "^15.8.1",
+		"@babel/cli": "^7.23.4",
+		"@babel/core": "^7.23.7",
+		"@babel/preset-env": "^7.23.8",
+		"@babel/preset-react": "^7.23.3",
+		"@formio/js": "^5.0.0-rc.33",
+		"babel-loader": "^9.1.3",
+		"chai": "^4.3.6",
+		"enzyme": "^3.11.0",
+		"enzyme-adapter-react-16": "^1.15.6",
+		"escope": "^4.0.0",
+		"eslint": "^8.56.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-mocha": "^10.2.0",
+		"eslint-plugin-react": "^7.33.2",
+		"jsdom": "^22.1.0",
+		"karma": "^6.3.18",
+		"karma-chrome-launcher": "^3.1.1",
+		"karma-mocha": "^2.0.1",
+		"karma-mocha-reporter": "^2.2.5",
+		"karma-webpack": "^5.0.0",
+		"mocha": "^10.2.0",
+		"prettier": "3.2.4",
+		"react": "^18.1.0",
+		"react-dom": "^18.1.0",
+		"react-test-renderer": "^18.2.0",
+		"react-transform-catch-errors": "^1.0.0",
+		"sinon": "^15.2.0",
+		"typescript": "^5.1.6",
+		"webpack": "^5.88.2"
   },
-  "peerDependencies": {
-    "react": ">=16.8.0",
-    "rxjs": ">=7.0.0"
-  },
-  "lint-staged": {
-    "*.js": [
-      "prettier --write",
-      "standard --fix"
-    ],
-    "*.@(ts|tsx)": [
-      "prettier --write",
-      "yarn lint:eslint"
-    ]
-  },
-  "prettier": {
-    "printWidth": 120,
-    "semi": false,
-    "trailingComma": "all",
-    "singleQuote": true,
-    "arrowParens": "always",
-    "parser": "typescript"
-  },
-  "jest": {
-    "resolver": "browser-resolve"
-  },
+
+
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
