--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@etelstamour/hooks",
 	"version": "0.3.0",
-	"description": "React renderer for form.io forms.",
+	"description": "React renderer for form.",
 	"main": "lib/index.js",
 	"scripts": {
 		"test": "karma start --single-run",
